feat(TASK-172): xml-gen канон CRLF во всём выводе + BOM на .bsl и EPF Form.xml
Весь вывод xml-gen приведён к канону Designer (грунт-труф _Демо: BOM ef bb bf + CRLF
во ВСЕХ файлах — .xml/.bsl/Template.xml). Раньше: LF везде; .bsl и EPF Form.xml вовсе
без BOM.

Единый чокпоинт нормализации (новый io/Crlf.java), без россыпи \r\n по литералам:
- Crlf.normalize = replace("\r\n","\n").replace("\n","\r\n") — идемпотентно (нет \r\r\n).
- Crlf.withBom — BOM + normalize, funnel для StringBuilder-writer'ов (Meta/Config/Subsystem/
  Interface/Extension/Template/Epf + editor'ы).
- Crlf.wrapLfToCrlf(OutputStream) — байтовый фильтр LF→CRLF для StAX-стоков (XmlWriter,
  XmlDocumentWriter), BOM пишется ДО фильтра.
- .bsl (BslStubWriter, ObjectContainerEditor, MetaEditor, EpfWriter, MetaWriter) — BOM+CRLF.
- EPF Form.xml: createWriter false→true (канон _Демо: все Ext/Form.xml = ef bb bf, как
  standalone FormWriter из TASK-171). Тест EpfWriterTest, закреплявший отсутствие BOM, перевёрнут.
- ByteSafeFileHandler (правка существующих файлов) НЕ тронут — сохраняет исходную раскладку.

Верификация: gradlew test 641/0; harness TASK-154 282/282 (0 регрессий, CRLF-агностичен);
байтовая сверка генерации vs _Демо — BOM + 100% CRLF на .xml/.bsl/Template/meta; идемпотентно.

Phase: implementation
Agent: developer-code (a237b3c0) + orchestrator (EPF Form BOM)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>