@@ -380,11 +380,10 @@ public class SubsystemEditor {
         sb.append("\t</Subsystem>\n");
         sb.append("</MetaDataObject>\n");
 
-        byte[] data = sb.toString().getBytes(StandardCharsets.UTF_8);
-        byte[] out = new byte[BOM.length + data.length];
-        System.arraycopy(BOM, 0, out, 0, BOM.length);
-        System.arraycopy(data, 0, out, BOM.length, data.length);
-        Files.write(childFile, out);
+        //++agent TASK-172 [02.06.2026 07:23:00]
+        // Новый файл дочерней подсистемы: канон Designer (_Демо) — BOM + CRLF.
+        Files.write(childFile, io.github.onec.xmlgen.io.Crlf.withBom(sb.toString()));
+        //++agent TASK-172
     }
 
     /**
@@ -459,15 +458,19 @@ public class SubsystemEditor {
     }
 
     public void save() throws IOException {
+        //++agent TASK-172 [02.06.2026 07:22:00]
+        // Канон Designer (_Демо) — CRLF. Правка подсистемы строковыми заменами вставляет
+        // \n-фрагменты; нормализуем итог к CRLF идемпотентно, BOM-решение сохраняем.
+        byte[] contentBytes = io.github.onec.xmlgen.io.Crlf.normalize(content).getBytes(StandardCharsets.UTF_8);
         if (hasBom) {
-            byte[] contentBytes = content.getBytes(StandardCharsets.UTF_8);
             byte[] result = new byte[BOM.length + contentBytes.length];
             System.arraycopy(BOM, 0, result, 0, BOM.length);
             System.arraycopy(contentBytes, 0, result, BOM.length, contentBytes.length);
             Files.write(filePath, result);
         } else {
-            Files.writeString(filePath, content, StandardCharsets.UTF_8);
+            Files.write(filePath, contentBytes);
         }
+        //++agent TASK-172
     }
 
     // --- Internal ---
